# Route_Optimisation_

./: .gitignore  CMakeLists.txt  README.md  distance_deap.py  only_emissions_or.py  only_emissions_pyvrp.py  optimization_plugin.py  or_check.py  requirements.txt  run_optimization.py  test1.py  test2.py
Algo/: Ward30_Finalpoints.shp  Ward30_Finalpoints.shx  aco_algo.py  clean_26.shp  clean_26.shx  compactor.shp  compactor.shx  distance_matrix.csv  distance_matrix.py  distance_matrix.xlsx  example_pyvrp.py  final ward 27 intersection point.shp  final ward 27 intersection point.shx  gmaps_distance_time_matrix_pooled.xlsx  new.py  nextplot_example.py  nxtplt.py  only_emissions_or.py  test2.py  trial_complete.py
src/: main.cpp
